# UT_Grade_Parser

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
src/: database.rs  main.rs  network.rs  parse.rs
