[package]
name = "ut_grade_parser"
version = "0.1.0"
edition = "2021"
description = "A grade distribution parser for the University of Texas at Austin"
authors = ["doprz"]
homepage = "https://github.com/doprz/UT_Grade_Parser"
repository = "https://github.com/doprz/UT_Grade_Parser"
license = "MIT OR Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
encoding_rs = "0.8.33"
reqwest = { version = "0.11.25", features = ["multipart"] }
bytes = "1.5.0"
scraper = "0.19.0"
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
