[package]
name = "ut_grade_parser"
version = "0.1.0"
edition = "2021"
description = "A grade distribution parser for the University of Texas at Austin"
authors = ["doprz"]
homepage = "https://github.com/doprz/UT_Grade_Parser"
repository = "https://github.com/doprz/UT_Grade_Parser"
license = "MIT OR Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.25", features = ["multipart"] }
bytes = "1.5.0"
scraper = "0.19.0"
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
csv = "1.3.0"
serde = { version = "1.0.197", features = ["derive"]}
clap = { version = "4.5.2", features = ["derive"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.11.1"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu"]
# Publish jobs to run in CI
pr-run-mode = "plan"
